# docker-dbt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: ci.yml  deploy.yml
requirements/: pyproject.toml  requirements-bigquery.txt  requirements-postgres.txt  requirements-redshift.txt  requirements-snowflake.txt
requirements/0.19/: pyproject.toml
requirements/0.20/: pyproject.toml
requirements/0.21/: pyproject.toml
requirements/1.0/: pyproject.toml
requirements/1.1/: pyproject.toml
requirements/1.2/: pyproject.toml
requirements/1.3/: pyproject.toml
requirements/1.4/: pyproject.toml
requirements/1.5/: pyproject.toml
