[tool.poetry]
name = "dbt-1-3"
version = "0.0.0"
description = "dbt 1.3 setup"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.8"
dbt-core = "~1.3.3"
dbt-rpc = "~0.2.1"
dbt-athena-community = "~1.3.5"
dbt-bigquery = "~1.3.1"
dbt-postgres = "~1.3.3"
dbt-redshift = "~1.3.0"
dbt-snowflake = "~1.3.0"
# dbt-rpc specifies ">=1.12,<2", but there's a breaking change in 1.14 with how
# dbt uses the library.
json-rpc = "1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
