[tool.poetry]
name = "dbt-1-4"
version = "0.0.0"
description = "dbt 1.4 setup"
authors = []

[tool.poetry.dependencies]
python = "~3.8"
dbt-core = "~1.4.4"
dbt-rpc = "~0.3.1"
dbt-athena-community = "~1.4.3"
dbt-bigquery = "~1.4.1"
dbt-materialize = "~1.4.1"
dbt-postgres = "~1.4.4"
dbt-redshift = "~1.4.0"
dbt-snowflake = "~1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
